--- a/css/style.css
+++ b/css/style.css
@@ -11,27 +11,32 @@ body{
   background-color: #555; /* Green */
   border: 1px solid #555;
   color: white;
-  padding: 80px 150px;
   text-align: center;
   text-decoration: none;
   display: inline-table;
-  font-size: 30px;
+  font-size: 20px;
   cursor: pointer;
-  float: none;
+	float: none;
+	width: 200px;
+	box-sizing: border-box;
+	height: 100px;
+	padding: 25px;
+	
 }
 .btn-group2 .button {
   background-color: #555; /* Green */
   border: 1px solid #555;
   color: white;
-	padding:80px 50px 80px 50px;
   text-align: center;
   text-decoration: none;
   display: inline-table;
-  font-size: 15px;
+  font-size: 20px;
   cursor: pointer;
 	float: none;
-	width: 100px;
+	width: 200px;
 	height: 100px;
+	
+	padding: 25px;
 }
 .btn-group2 .button:not(:last-child) {
   border-right: none; /* Prevent double borders */
